--- a/Lab0/ArcProDesktopMethodCode.ipynb
+++ b/Lab0/ArcProDesktopMethodCode.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -24,13 +26,6 @@
     "\n",
     "arcpy.analysis.Buffer(\"HighFrequencyNetwork\", r\"C:\\Users\\Alexander\\Desktop\\GIS Work\\GIS5571\\Lab0\\GIS5571 Lab0\\GIS5571 Lab0.gdb\\HighFrequencyNetwork_Buffer1\", \"25 Meters\", \"FULL\", \"ROUND\", \"NONE\", None, \"PLANAR\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
