--- a/Lab1/MNGeoComAPI.ipynb
+++ b/Lab1/MNGeoComAPI.ipynb
@@ -1569,7 +1569,7 @@
     "response = requests.get(tags, auth=('user', 'pass'), verify = False)\n",
     "\n",
     "tags_json = json.loads(response.content)\n",
-    "pprint.pprint(tags_json)"
+    "#pprint.pprint(tags_json) # I'm removing the print function so it doesn't make the GibHub hard to read"
    ]
   },
   {
@@ -3240,7 +3240,7 @@
     "\n",
     "package_dict = json.loads(package_info.content)\n",
     "\n",
-    "pprint.pprint(package_dict)"
+    "#pprint.pprint(package_dict) # I'm removing the print function so it doesn't make the GibHub hard to read"
    ]
   },
   {
